tests/parser/define-class.12.bad.coalton
;; BAD: Define Class
(package test-package)

(define-class (C :a)
  (0.5 (:a -> :a)))
